--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.1.0",
     "eo-locale": "^7.4.2",
     "mdbreact": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^2.11.1",
     "react-charts": "^2.0.0-beta.7",
